@@ -31,6 +31,7 @@
 #include "ns3/ipv4-header.h"
 #include "ns3/ipv4-interface.h"
 #include "ns3/ipv6-header.h"
+#include "ns3/ipv6-interface.h"
 #include "ns3/event-id.h"
 #include "tcp-tx-buffer.h"
 #include "tcp-rx-buffer.h"
@@ -221,8 +222,9 @@ protected:
    * \param packet the incoming packet
    * \param header the packet's IPv6 header
    * \param port the incoming port
+   * \param incomingInterface the incoming interface
    */
-  void ForwardUp6 (Ptr<Packet> packet, Ipv6Header header, uint16_t port);
+  void ForwardUp6 (Ptr<Packet> packet, Ipv6Header header, uint16_t port, Ptr<Ipv6Interface> incomingInterface);
 
   /**
    * \brief Called by TcpSocketBase::ForwardUp().
